@@ -15,6 +15,7 @@ Open Search Server 1.2
 Open Search Server 1.1.2
 
 Bug fixes
+- 2903935: Negative value on web crawler statistics
 - 2898343: Behaviour problem of wildcard function
 - 2899784: duplication of returned field in returned xml
 
